# DocumentAssistant

./: .dockerignore  .env.example  .gitignore  .nixpacks.toml  Dockerfile  data.json  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: agent.py  context.py  insight_tools.py  rag_tool.py
app/api/: agent.py  auth.py  billing.py  document.py  rag.py
app/core/: database.py
app/middleware/: agent_context_middleware.py
app/models/: __init__.py  documents.py  users.py
app/services/: auth_service.py  document_service.py  rag_service.py
app/utils/: auth_dependencies.py  auth_functions.py  document_store.py  subscription.py  vector_store.py
frontend/: app.py  utils.py
src/: __init__.py  main.py
src/agents/: agent.py  agent_state.py  context.py  insight_tools.py  rag_tool.py
src/api/: agent.py  auth.py  billing.py  document.py  rag.py
src/core/: logging_config.py
src/middleware/: agent_context_middleware.py
src/models/: __init__.py  documents.py  users.py
src/schemas/: users.py
src/services/: auth_service.py  document_service.py  rag_service.py
src/utils/: agent_dependencies.py  auth_dependencies.py  auth_functions.py  document_store.py  evaluate_rag.py  models.py  ocr.py  subscription.py
