[project]
name = "documentassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.3",
    "fastapi[all]>=0.122.0",
    "passlib[bcrypt]==1.7.4",
    "phonenumbers==9.0.17",
    "psycopg2-binary>=2.9.11",
    "pydantic-extra-types>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.19",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.30.1",
]
